# -*- coding: utf-8; tab-width: 4; -*-
# ex: set fileencoding=utf-8 softtabstop=4 tabstop=4 expandtab:

2013-07-01 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Fix for internal services so that the terminate function is always called
    * Fix queuing on websocket connection for outgoing service requests

2013-06-29 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Make the CloudI Service API automatically discover its functions
      from the exports of the module cloudi_service_api within
      cloudi_service_api_requests

2013-06-28 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add websocket_timeout and use_client_ip_prefix
      configuration options to the cloudi_service_http_cowboy service
    * Add validation to the CloudI Service API that doesn't cause internal
      process execution exceptions
    * Add the CloudI Service API function services_search for searching
      services based on a service name

2013-06-27 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add the elli HTTP server for comparison
      (performance shows that cowboy should be used instead)
    * Fix the makefile issue with configuration files

2013-06-26 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Outgoing websocket service requests now use the list output_type
      (output configuration setting) to provide text requests instead of binary
    * The cloudi module now only accepts immediate destination refresh
      methods so that the configuration accurately reflects the functionality
    * Fix the console log output destination in the startup script
    * Do not clobber the configuration files when the
      installation occurs twice

2013-06-20 Michael Truog   <mjtruog [at] gmail (dot) com>

    * CloudI version 1.2.4 (beta) released
    * Fix local protocol option for external services
      (confirmed to work on OSX now)
    * Add fixes for R16B01 usage
    * Update uuid, nodefinder, emysql, ranch, cowboy
