@@ -2,6 +2,7 @@ CloudI Contributors (chronological order):
 Michael Truog       <mjtruog [at] gmail (dot) com>
 Michael T. Richter  <ttmrichter [at] gmail (dot) com>
 Hardy Jones         <jones3.hardy [at] gmail (dot) com>
+Lukas Larsson       <garazdawi [at] gmail (dot) com>
 
 CloudI Integration Dependencies:
 cowboy        Loïc Hoguin <essen@ninenines.eu>
