@@ -1,3 +1,4 @@
 #!/bin/sh
-autoreconf --force --install -I config -I m4
+DIRECTORY=`dirname $0`
+autoreconf --force --install -I config -I m4 $DIRECTORY/configure.ac
 
