@@ -15,8 +15,6 @@
 {application, cowboy, [
 	{id, "Cowboy"},
 	{description, "Small, fast, modular HTTP server."},
-	{sub_description, "Cowboy is also a socket acceptor pool, "
-		"able to accept connections for any kind of TCP protocol."},
 	{vsn, "0.8.6"},
 	{modules, []},
 	{registered, [cowboy_clock, cowboy_sup]},
