@@ -15,7 +15,6 @@
 {application, ranch, [
 	{id, "Ranch"},
 	{description, "Socket acceptor pool for TCP protocols."},
-	{sub_description, "Reusable library for building networked applications."},
 	{vsn, "0.8.4"},
 	{modules, []},
 	{registered, [ranch_sup, ranch_server]},
