@@ -120,7 +120,7 @@
  [
   {mkdir, "bin"},
   {mkdir, "etc"},
-  {copy, "@srcdir@/rel/files/app.config", "etc/app.config"},
+  {copy, "@builddir@/rel/files/app.config", "etc/app.config"},
   {copy, "@srcdir@/rel/files/erl", "{{erts_vsn}}/bin/erl"},
   {copy, "@srcdir@/rel/files/nodetool", "{{erts_vsn}}/bin/nodetool"},
   {copy, "@srcdir@/rel/files/install_upgrade.escript",
